# passwd

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  render.yaml
.github/workflows/: android-release.yml  ci.yml  desktop-release.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  fly.toml  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/auth/: auth.go  secretbox.go  token.go  totp.go  totp_test.go  verifier.go
backend/internal/config/: config.go  config_test.go
backend/internal/crypto/: crypto.go  crypto_test.go
backend/internal/server/: audit_test.go  handlers.go  handlers_2fa.go  handlers_audit.go  handlers_auth.go  handlers_recovery.go  handlers_sessions.go  handlers_sharing.go  handlers_vault.go  handlers_webauthn.go  helpers.go  middleware.go  recovery_test.go  security_test.go  server.go  server_test.go  sharing_test.go  webauthn_handlers_test.go
backend/internal/storage/: memory.go  postgres.go  sqlite.go  storage.go  store_contract_test.go  (+1 more)
clients/: package-lock.json  package.json
clients/apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
clients/apps/desktop/src-tauri/capabilities/: default.json
clients/apps/desktop/src-tauri/icons/: icon.icns
clients/apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  CRYPTO.md  DEPLOYMENT.md  ROADMAP.md  SECURITY-REVIEW.md  test-vectors.json
scripts/: deploy.sh  mobile.sh
site/: .env.example  README.md  astro.config.mjs  package-lock.json  package.json
site/src/: config.ts
(+54 files in other folders)
