[package]
name = "passwd-desktop"
version = "0.1.0"
description = "passwd — a standalone, offline password vault"
edition = "2021"
rust-version = "1.77"

[lib]
name = "passwd_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[profile.release]
# Smaller, faster-to-distribute binaries.
strip = true
lto = true
codegen-units = 1
panic = "abort"
